--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -114,7 +114,7 @@ button {
 }
 
 main {
-  width: min(1160px, calc(100vw - 276px));
+  width: min(1160px, 100%);
   margin: 0 auto;
   padding: 28px;
 }
